tests/baselines/reference/relativePathMustResolve.errors.txt
==== tests/cases/compiler/foo_1.ts (3 errors) ====
    import foo = require('./test/foo');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module ''./test/foo''.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    var z = foo.x + 10;
            ~~~
!!! error TS2095: Could not find symbol 'foo'.
    
==== tests/cases/compiler/foo_0.ts (0 errors) ====
    export var x = 42;
    